# DiscordBotPy

./: database.db  finished_matches.json  keep_alive.py  log.py  main.py  pyproject.toml  replit.nix  scheduled_matches.json  soccer_api.py  team.json
Database/Services/: dbCredit.py  dbSetup.py  dbSoccer.py  dbSocialCredit.py
cogs/: basic.py  credit.py  soccer.py  social_credit.py  test.py
